debut page mention legale

--- a/formation-alternance/alternance.html
+++ b/formation-alternance/alternance.html
@@ -27,7 +27,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Fin fontawsome -->
     <link rel="stylesheet" href="alternance.css">
-    <link rel="stylesheet" href="../s">
+    <link rel="stylesheet" href="../style/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -232,8 +232,47 @@
         </div>
         <div class="alternance-content-two">
             <h3>Découvrez toutes nos formations en alternance</h3>
+            <div class="card d-flex p-2" id="alternance-content-two-card">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/11.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/11.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <div class="alternance-content-three">
+            <h3>COMMENT S'INSCRIRE A NOS FORMATIONS EN ALTERNANCE ?</h3>
+            <div class="alternance-content-three-item">
+                <div class="alternance-content-three-items">
+                    <p class="alternance-number">1</p>
+                    <p>Vous y êtes ! <br>Trouvez votre <br>formation en <br>alternance et <br><a href="https://simplon.co/je-candidate?hsLang=fr-fr#alternance=.alternance">candidatez</a></p>
+                </div>
+                <div class="alternance-content-three-items">
+                    <p class="alternance-number">2</p>
+                    <p>Insription et<br>admission sans<br>prérequis de <br>diplôme <br></p>
+                </div>
+                <div class="alternance-content-three-items">
+                    <p class="alternance-number">3</p>
+                    <p>Inscription au <br><a href="https://campagne.simplon.co/fr/formez-vous-avec-simplon">Starter Program</a><br>pour trouver une<br>alternance<br></p>
+                </div>
+                <div class="alternance-content-three-items">
+                    <p class="alternance-number">4</p>
+                    <p>Vous trouvez votre<br>alternance et vous<br>démarrez votre<br>formation<br></p>
+                </div>
+            </div>
         </div>
     </section>
+
         <!-- section footer -->
         <footer class=" text-center text-lg-start  text-muted ">
             <!-- Section: Social media -->
