dérnier réglage de la page ma formation en alternance

--- a/formation-alternance/alternance.html
+++ b/formation-alternance/alternance.html
@@ -232,20 +232,123 @@
         </div>
         <div class="alternance-content-two">
             <h3>Découvrez toutes nos formations en alternance</h3>
-            <div class="card d-flex p-2" id="alternance-content-two-card">
-                <div class="card" style="width: 18rem;">
+            <div class="d-flex justify-content-center gap-4 p-2" id="alternance-content-two-carte">
+                <div class="card alternance-content-two-item" style="width: 33rem;">
                     <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/11.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">ADMINISTRATEUR D'INFRASTRUCTURES SECURISEES DEVOPS</h5>
+                      <p class="card-text">L'administrateur d'infrastructures sécurisées s’occupe des infrastructures informatiques dont il assure l'installation, la sécurisation...</p>
+                      <div class="alternance-card-item">
+                      <div>
+                        <p><span><i class="fa-solid fa-calendar-days" style="color: #ce0033;"></i></span><span>Rentrées tout au long de l'année</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-user" style="color: #ce0033;"></i></span><span>Distanciel & Présentiel</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-clock" style="color: #ce0033;"></i></span><span>12-24 Mois</span></p>
+                      </div>
                     </div>
-                <div class="card" style="width: 18rem;">
+                      <a href="#" class="btn btn-primary">Postuler</a>
+                    <p class="alternance-content-two-badge">INFRASTRUCTURES ET CYBERSECURITE</p>
+                    </div>
+                </div>
+                <div class="card alternance-content-two-item" style="width: 33rem;">
+                    <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/9.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Concepteur-rice Développeur-se en environnement DevOps</h5>
+                      <p class="card-text">Le Concepteur Développeur d'Applications est un professionnel qui analyse les besoins d'un client, les traduit en exigences fonctionnelles et...</p>
+                      <div>
+                        <p><span><i class="fa-solid fa-calendar-days" style="color: #ce0033;"></i></span><span>Rentrées tout au long de l'année</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-user" style="color: #ce0033;"></i></span><span>Distanciel & Présentiel</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-clock" style="color: #ce0033;"></i></span><span>12-24 Mois</span></p>
+                      </div>
+                      <a href="#" class="btn btn-primary">Postuler</a>
+                    <p class="alternance-content-two-badge">DEVELOPPEMENT D'APPLICATION</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="d-flex justify-content-center gap-4 p-2" id="alternance-content-two-carte">
+                <div class="card alternance-content-two-item" style="width: 33rem;">
+                    <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/5-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">TECHNICIEN-NE SUPERIEUR-E SYSTEME ET RESEAUX</h5>
+                      <p class="card-text">Le technicien supérieur systèmes et réseaux participe à la mise en service et au maintien en condition opérationnelle de l’infrastructure informatique. </p>
+                      <div class="alternance-card-item">
+                      <div>
+                        <p><span><i class="fa-solid fa-calendar-days" style="color: #ce0033;"></i></span><span>Rentrées tout au long de l'année</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-user" style="color: #ce0033;"></i></span><span>Distanciel & Présentiel</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-clock" style="color: #ce0033;"></i></span><span>12-24 Mois</span></p>
+                      </div>
+                    </div>
+                      <a href="#" class="btn btn-primary">Postuler</a>
+                    <p class="alternance-content-two-badge">INFRASTRUCTURES ET CYBERSECURITE</p>
+                    </div>
+                </div>
+                <div class="card alternance-content-two-item" style="width: 33rem;">
+                    <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">PARCOURS DEVELOPPEUR EN INTELLIGENCE ARTIFICIELLE</h5>
+                      <p class="card-text">L'IA est en réalité une discipline qui réunit des sciences, théories et techniques Le métier de développeur en IA prend une importance croissante dans les nouveaux métiers de la data et l’IA puisqu'il..</p>
+                      <div>
+                        <p><span><i class="fa-solid fa-calendar-days" style="color: #ce0033;"></i></span><span>Rentrées tout au long de l'année</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-user" style="color: #ce0033;"></i></span><span>Distanciel & Présentiel</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-clock" style="color: #ce0033;"></i></span><span>12-24 Mois</span></p>
+                      </div>
+                      <a href="#" class="btn btn-primary">Postuler</a>
+                    <p class="alternance-content-two-badge">INTELLIGENCE ARTIFICIELLE</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="d-flex justify-content-center gap-4 p-2" id="alternance-content-two-carte">
+                <div class="card alternance-content-two-item" style="width: 33rem;">
+                    <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">PARCOURS ADMISNISTRATEUR-RICE CLOUD</h5>
+                      <p class="card-text">Le parcours Administrateur-trice Cloud est une formation qui permet d'acquérir les compétences nécessaires pour administrer et garantir l'administration, la mise en place et l'exploitation des infrastructures Cloud...</p>
+                      <div class="alternance-card-item">
+                      <div>
+                        <p><span><i class="fa-solid fa-calendar-days" style="color: #ce0033;"></i></span><span>Rentrées tout au long de l'année</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-user" style="color: #ce0033;"></i></span><span>Distanciel & Présentiel</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-clock" style="color: #ce0033;"></i></span><span>12-24 Mois</span></p>
+                      </div>
+                    </div>
+                      <a href="#" class="btn btn-primary">Postuler</a>
+                    <p class="alternance-content-two-badge">CLOUD</p>
+                    </div>
+                </div>
+                <div class="card alternance-content-two-item" style="width: 33rem;">
                     <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/11.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">OPERATEUR-RICE DE SOLUTIONS DE SECURITE CLOUD ET HYBRIDE</h5>
+                      <p class="card-text">Le Concepteur Développeur d'Applications est un professionnel qui analyse les besoins d'un client, les traduit en exigences fonctionnelles et...</p>
+                      <div>
+                        <p><span><i class="fa-solid fa-calendar-days" style="color: #ce0033;"></i></span><span>Rentrées tout au long de l'année</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-user" style="color: #ce0033;"></i></span><span>Distanciel & Présentiel</span></p>
+                      </div>
+                      <div>
+                        <p><span><i class="fa-regular fa-clock" style="color: #ce0033;"></i></span><span>12-24 Mois</span></p>
+                      </div>
+                      <a href="#" class="btn btn-primary">Postuler</a>
+                    <p class="alternance-content-two-badge">CLOUD</p>
                     </div>
                   </div>
             </div>
