--- a/qui-sommes-nous/qsnous.html
+++ b/qui-sommes-nous/qsnous.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="mentionlegale.css">
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="qsnous.css">
     <link rel="stylesheet" href="../style/style.css">
     <title>Document</title>
 </head>
 <body>
+    <!-- début header -->
     <header class="" id="header" class="">
         <div class="header-top d-flex justify-content-between py-2">
             <div class="section-left d-flex">
@@ -152,53 +153,21 @@
         </script>
         
     </header>
-    <section class="mlegal">
-        <div class="mlegal-banniere">
-            <h1>Mention Légale</h1>
-            <p><span><a href="#">Accueil</a> &nbsp;/</span><span> &nbsp; Mention Légale</span></p>
-        </div>
-        <div class="mlegal-content">
-            <div class="mlegal-content1">
-                <h2>EDITEUR</h2>
-                <p>Site publié par Simplon.co <br>
-                    SAS agréée ESUS au capital de 448.390 euros <br>
-                    RCS Bobigny : 792 791 329 00016 <br>
-                    Enregistré en tant qu’organisme de formation auprès de la DIRECCTE Ile-de-France sous le numéro 11 93 06676 93. Cet enregistrement ne vaut pas agrément de l’État.</p>
-            </div>
-            <div class="mlegal-content1">
-                <h2>Responsable de la publication</h2>
-                <p>Frédéric Bardeau joignable sur inbox (at) simplon (point) co</p>
-            </div>
-            <div class="mlegal-content1">
-                <h2>Hébergement</h2>
-                <p>OVH, société par actions simplifiée dont le siège social est au 2 rue Kellermann, 59100 Roubaix et dont le numéro <br>de téléphone est le 0820 698 765.
-                    Design, développement, intégration et déploiement​​​​​​​ <br>
-                    SimplonProd, l'agence web solidaire de Simplon.co</p>
-            </div>
-            <div class="mlegal-content1">
-                <h2>Siège social</h2>
-                <p>55 rue de Vincennes, 93100 Montreuil</p>
-            </div>
-            <div class="mlegal-content1">
-                <h2>Données personnelles et politique de confidentialité</h2>
-                <p>Données personnelles et politique de confidentialité. Les données personnelles recueillies dans le cadre du site de <br>Simplon.co font l’objet d’un traitement par la SAS Simplon.co et ses filiales. Les formulaires présents sur notre site <br>nous permettent de qualifier votre demande et de l'orienter vers les collaborateurs de Simplon.co qui seront à <br>même d'y répondre. Vous pouvez choisir de ne pas nous fournir des données, mais certaines sont nécessaires à <br>des fins d’orientation : candidature RH, candidature à une formation, contact presse, contact pour ouvrir une <br>fabrique, etc. Les données personnelles collectées sont portées à connaissance des destinataire des formulaires <br>(spécifique selon les formulaires) au sein des directions territoriales, du service formation, de la direction générale, <br>et de la direction des ressources. Ces différents traitements de données se font sur différentes bases selon la <br>nature des données collectées : des traitements opérés sur le fondement légal de l'exécution de nos obligations <br>contractuelles, de votre consentement, et enfin sur le fondement de l'intérêt légitime (dont l’impact social) poursuivi <br>par Simplon.co. En terme de sécurisation : sachez que vos données sont stockées sur des serveurs installés en <br>Europe, que les accès à nos locaux sont sécurisés, et que l’ensemble de nos contrats de travail, nos contrats avec <br>nos prestataires et nos contrat commerciaux ont été mis à jour afin d’y intégrer nos obligations de sous-traitants ou <br>de responsables conjoints au sens du RGPD.</p>
-            </div>
-            <div class="mlegal-content1">
-                <h2>EDITEUR</h2>
-                <p>Site publié par Simplon.co <br>
-                    SAS agréée ESUS au capital de 448.390 euros <br>
-                    RCS Bobigny : 792 791 329 00016 <br>
-                    Enregistré en tant qu’organisme de formation auprès de la DIRECCTE Ile-de-France sous le numéro 11 93 06676 93. Cet enregistrement ne vaut pas agrément de l’État.</p>
-            </div>
-            <div class="mlegal-content1">
-                <h2>EDITEUR</h2>
-                <p>Site publié par Simplon.co <br>
-                    SAS agréée ESUS au capital de 448.390 euros <br>
-                    RCS Bobigny : 792 791 329 00016 <br>
-                    Enregistré en tant qu’organisme de formation auprès de la DIRECCTE Ile-de-France sous le numéro 11 93 06676 93. Cet enregistrement ne vaut pas agrément de l’État.</p>
-            </div>
-        </div>
-    </section>
+    <!-- fin header -->
+
+    <!-- debut contenu -->
+    <div class="qsnous-banniere">
+        <h1>Qui Sommes Nous</h1>
+        <p><span><a href="#">Accueil</a> &nbsp;/</span><span> &nbsp; A propos &nbsp;/</span> <span> &nbsp; Qui Sommes-Nous</span></p>
+    </div>
+    <div class="qsnous-content">
+        <h4>Simplon.co</h4>
+        <p>Nous sommes un réseau de fabriques numériques et inclusives en France et à l’étranger. Nous avons formé plus de <br>25 000 Simploniens et Simploniennes depuis 2013, dont 40% de femmes et 44% de personnes peu ou pas diplômées. <br>Nous sommes une entreprise sociale et solidaire qui entend faire du numérique un véritable levier d’inclusion pour <br>révéler des talents différents peu représentés dans le digital et les métiers techniques du numérique. Nous accompagnons <br>les organisations pour que leur transformation digitale reste inclusive.
+            ​​​​​De manière indirecte, nous agissons <br>également dans le domaine de la médiation numérique et de l'apprentissage du numérique créatif auprès des enfants</p>
+    </div>
+    <!-- fin contenu -->
+
+    <!-- debut footer -->
     <footer class=" text-center text-lg-start  text-muted ">
         <!-- Section: Social media -->
         <section class="antifaq container-fluid ">
@@ -324,5 +293,7 @@
         </div>
         <!-- Copyright -->
     </footer>
+    <!-- fin footer -->
+
 </body>
 </html>
