dernier réglage de la page mention légale

--- a/mentions-légales/metionlegale.html
+++ b/mentions-légales/metionlegale.html
@@ -152,7 +152,7 @@
         </script>
         
     </header>
-    <section class="mlegal">
+    <section class="container mlegal">
         <div class="mlegal-banniere">
             <h1>Mention Légale</h1>
             <p><span><a href="#">Accueil</a> &nbsp;/</span><span> &nbsp; Mention Légale</span></p>
@@ -160,9 +160,9 @@
         <div class="mlegal-content">
             <div class="mlegal-content1">
                 <h2>EDITEUR</h2>
-                <p>Site publié par Simplon.co <br>
-                    SAS agréée ESUS au capital de 448.390 euros <br>
-                    RCS Bobigny : 792 791 329 00016 <br>
+                <p>Site publié par Simplon.co
+                    SAS agréée ESUS au capital de 448.390 euros
+                    RCS Bobigny : 792 791 329 00016
                     Enregistré en tant qu’organisme de formation auprès de la DIRECCTE Ile-de-France sous le numéro 11 93 06676 93. Cet enregistrement ne vaut pas agrément de l’État.</p>
             </div>
             <div class="mlegal-content1">
@@ -171,8 +171,8 @@
             </div>
             <div class="mlegal-content1">
                 <h2>Hébergement</h2>
-                <p>OVH, société par actions simplifiée dont le siège social est au 2 rue Kellermann, 59100 Roubaix et dont le numéro <br>de téléphone est le 0820 698 765.
-                    Design, développement, intégration et déploiement​​​​​​​ <br>
+                <p>OVH, société par actions simplifiée dont le siège social est au 2 rue Kellermann, 59100 Roubaix et dont le numéro de téléphone est le 0820 698 765.
+                    Design, développement, intégration et déploiement​​​​​​​
                     SimplonProd, l'agence web solidaire de Simplon.co</p>
             </div>
             <div class="mlegal-content1">
@@ -181,22 +181,20 @@
             </div>
             <div class="mlegal-content1">
                 <h2>Données personnelles et politique de confidentialité</h2>
-                <p>Données personnelles et politique de confidentialité. Les données personnelles recueillies dans le cadre du site de <br>Simplon.co font l’objet d’un traitement par la SAS Simplon.co et ses filiales. Les formulaires présents sur notre site <br>nous permettent de qualifier votre demande et de l'orienter vers les collaborateurs de Simplon.co qui seront à <br>même d'y répondre. Vous pouvez choisir de ne pas nous fournir des données, mais certaines sont nécessaires à <br>des fins d’orientation : candidature RH, candidature à une formation, contact presse, contact pour ouvrir une <br>fabrique, etc. Les données personnelles collectées sont portées à connaissance des destinataire des formulaires <br>(spécifique selon les formulaires) au sein des directions territoriales, du service formation, de la direction générale, <br>et de la direction des ressources. Ces différents traitements de données se font sur différentes bases selon la <br>nature des données collectées : des traitements opérés sur le fondement légal de l'exécution de nos obligations <br>contractuelles, de votre consentement, et enfin sur le fondement de l'intérêt légitime (dont l’impact social) poursuivi <br>par Simplon.co. En terme de sécurisation : sachez que vos données sont stockées sur des serveurs installés en <br>Europe, que les accès à nos locaux sont sécurisés, et que l’ensemble de nos contrats de travail, nos contrats avec <br>nos prestataires et nos contrat commerciaux ont été mis à jour afin d’y intégrer nos obligations de sous-traitants ou <br>de responsables conjoints au sens du RGPD.</p>
+                <p>Données personnelles et politique de confidentialité. Les données personnelles recueillies dans le cadre du site de Simplon.co font l’objet d’un traitement par la SAS Simplon.co et ses filiales. Les formulaires présents sur notre site nous permettent de qualifier votre demande et de l'orienter vers les collaborateurs de Simplon.co qui seront à même d'y répondre. Vous pouvez choisir de ne pas nous fournir des données, mais certaines sont nécessaires à des fins d’orientation : candidature RH, candidature à une formation, contact presse, contact pour ouvrir une fabrique, etc. Les données personnelles collectées sont portées à connaissance des destinataire des formulaires (spécifique selon les formulaires) au sein des directions territoriales, du service formation, de la direction générale, et de la direction des ressources. Ces différents traitements de données se font sur différentes bases selon la nature des données collectées : des traitements opérés sur le fondement légal de l'exécution de nos obligations contractuelles, de votre consentement, et enfin sur le fondement de l'intérêt légitime (dont l’impact social) poursuivi par Simplon.co. En terme de sécurisation : sachez que vos données sont stockées sur des serveurs installés en Europe, que les accès à nos locaux sont sécurisés, et que l’ensemble de nos contrats de travail, nos contrats avec nos prestataires et nos contrat commerciaux ont été mis à jour afin d’y intégrer nos obligations de sous-traitants ou de responsables conjoints au sens du RGPD.</p>
             </div>
             <div class="mlegal-content1">
-                <h2>EDITEUR</h2>
-                <p>Site publié par Simplon.co <br>
-                    SAS agréée ESUS au capital de 448.390 euros <br>
-                    RCS Bobigny : 792 791 329 00016 <br>
-                    Enregistré en tant qu’organisme de formation auprès de la DIRECCTE Ile-de-France sous le numéro 11 93 06676 93. Cet enregistrement ne vaut pas agrément de l’État.</p>
+                <p>Pour une meilleure prise en compte de l'égalité femmes-hommes et pour ne pas contribuer à la sous-représentation 
+                    des femmes dans la société, ce site web et l'ensemble des communications de Simplon font la part belle aux
+                    mécanismes du langage ouvert et de l'écriture inclusive. 
+                </p>
             </div>
             <div class="mlegal-content1">
-                <h2>EDITEUR</h2>
-                <p>Site publié par Simplon.co <br>
-                    SAS agréée ESUS au capital de 448.390 euros <br>
-                    RCS Bobigny : 792 791 329 00016 <br>
-                    Enregistré en tant qu’organisme de formation auprès de la DIRECCTE Ile-de-France sous le numéro 11 93 06676 93. Cet enregistrement ne vaut pas agrément de l’État.</p>
-            </div>
+                <p>Nous favorisons donc autant que possible l'emploi des termes épicènes (dont la forme ne varie pas entre le féminin 
+                    et le masculin, comme collègues), de la double flexion féminin-masculin (collaborateurs et collaboratrices), l'accord
+                    de proximité (qui consiste à accorder les mots avec le terme le plus proche et non au masculin par défaut), et dans
+                    une moindre mesure l'utilisation des points (comme apprenant.es) pour ne pas alourdir la lecture. Pour des raisons
+                    RCS Bobigny : 792 791 329 00016             </div>
         </div>
     </section>
     <footer class=" text-center text-lg-start  text-muted ">
@@ -206,12 +204,12 @@
 
                 <div class="row">
                     <div class="col-md-4">
-                        <span class="">Vous avez une question?</span><br>
+                        <span class="">Vous avez une question?</span>
                         <button type="button" class="btn btn-light btn-sm">CONSULTER NOTRE ANTI-FAQ</button>
 
                     </div>
                     <div class="col-md-4 ms-auto  Inputbutton">
-                        <span>Inscrivez-vous a la newsletter</span><br>
+                        <span>Inscrivez-vous a la newsletter</span>
                         <input type="email" placeholder="Enter votre email" class="inputEmail shadow ">
                         <button type="button" class="btnInscrire  shadow ">S'INSCRIRE</button>
                     </div>
