--- a/metavers/metaverse.html
+++ b/metavers/metaverse.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cybersecurite</title>
-    <link rel="stylesheet" href="securite.css">
+    <title>metaverse</title>
+    <link rel="stylesheet" href="metaverse.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
      <link rel="stylesheet" href="../style/style.css">
+     <link rel="stylesheet" href="../header-footer/footer.css">
 </head>
 <body>
     <header class="" id="header" class="">
@@ -157,7 +158,7 @@
          fugit quidem nihil sapiente adipisci. Eius, molestiae  accusamus reprehenderit quos eum veritatis incidunt, fuga inventore et facilis animi 
          fugit quidem nihil sapiente adipisci. Eius, molestiae.</p>
     </div>
-   <div class="text"><span>Le developpement d'applications offre 12 formation</span></div> 
+   <div class="text"><span>LeMtaverse offre 2 formation</span></div> 
             <div class="container w-75 ml-2 mt-5">
    <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
@@ -180,7 +181,7 @@
         </div>
       </div>
     </div>
-    <div class="col">
+    <!-- <div class="col">
       <div class="card">
         <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -288,7 +289,7 @@
             <button>Decouvrir la Formation</button>
         </div>
     </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <footer class=" text-center text-lg-start  text-muted ">
