--- a/pedagogie/pedagogie.html
+++ b/pedagogie/pedagogie.html
@@ -167,6 +167,7 @@
         </div>
         <div class="equipe">
             <h1>Notre Equipe</h1>
+            <div class="container1">
             <div class="row row-cols-1 row-cols-md-2 g-10">
             <div class="card" style="width: 18rem;">
                 <img src="../public/image/amy.PNG" class="card-img-top" alt="...">
@@ -251,6 +252,7 @@
                         </div>
                       </div>
                 </div>
+            </div>
     </main>
 
 
