--- a/ressortissants/ressortissants.html
+++ b/ressortissants/ressortissants.html
@@ -172,7 +172,7 @@
         <section id="ressortissants">
             <div class="banner">
                 <div class="content-banner">
-                    <h4>Anti-FAQ</h4>
+                    <h4>NOS ACTIONS POUR UN NUMERIQUE INCLUSIF</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo voluptas pariatur itaque consequatur eius
                         perspiciatis aspernatur? Consequuntur distinctio, nulla pariatur consectetur quos nihil molestias quam amet
                         delectus enim deserunt in?</p>
