Finition de la page Nos actions pour les femmes et des autres page précédentes

--- a/nos-actions-pour-les-femmes/actionfemme.html
+++ b/nos-actions-pour-les-femmes/actionfemme.html
@@ -170,11 +170,81 @@
     <!-- fin header -->
 
     <!-- debut contenu -->
+
+     <!-- début banniere -->
     <div class="action-banniere">
         <h1>Femmes</h1>
         <p class="container action-titre">Déterminé.e à favoriser la (trans)formation numérique, inclusive et solidaire, Simplon mène des actions en faveur de la valorisation des femmes dans la tech depuis sa création en 2013.</p>
         <p class="action-path"><span><a href="#">Accueil</a> &nbsp;/</span><span> &nbsp; Candidats &nbsp;/</span> <span> &nbsp; Nos actions ...</span></p>
     </div>
+    <div class="action-banniere-carte">
+        <div class="action-banniere-carte-item">
+            <h2>25 000</h2>
+            <p>Simplonien.nes dans le monde</p>
+        </div>
+        <div class="action-banniere-carte-item">
+            <h2>37,6 %</h2>
+            <p>d'apprenantes dans nos formations</p>
+        </div>
+        <div class="action-banniere-carte-item">
+            <h2>69 %</h2>
+            <p>taux de sorties positives</p>
+        </div>
+    </div>
+     <!-- fin banniere -->
+
+     <div class="action-item">
+        <div class="action-item-image mx-4">
+            <img src="https://simplon.co/storage/2314/responsive-images/pagefemme2-1___medialibrary_original_912_420.jpg" alt="">
+        </div>
+        <div class="container action-item-text">
+            <h2>#Code has no Gender</h2>
+            <p> In Women we trust
+                Avec 42% d’apprenantes dans nos formations aujourd'hui, Simplon s'est engagée à atteindre la parité. Avec cette ambition, nous avons déployé une stratégie globale et associative pour déconstruire les stéréotypes de genre dans le numérique.</p>
+        </div>
+     </div>
+     <div class="action-item1">
+         <div class="container action-item-text">
+            <h2>Nos formations #Hackeuses</h2>
+            <p>En Île-de-France, ce projet est cofinancé par le Fonds Social Européen
+                Pour donner aux femmes l’envie d’appartenir au monde de la tech, Simplon a mis en place ses formations #Hackeuses. 6 semaines gratuites et 100% féminines pour :
+                s’initier au web ;
+                découvrir les métiers du numérique ;
+                être accompagnée dans son orientation professionnelle.
+                </p>
+        </div>
+        <div class="action-item-image mx-4">
+            <img src="https://femmes.simplon.co/uploads/Logos%20mini%20site%20Femmes/formation-Hackeuses-Simplon.png" alt="">
+        </div>
+     </div>
+     <div class="action-item">
+        <div class="action-item-image mx-4">
+            <img src="https://simplon.co/storage/1924/responsive-images/initiation-kids%281%29___medialibrary_original_679_437.png" alt="">
+        </div>
+        <div class="container action-item-text">
+            <h2>Initiation Kids</h2>
+            <p>Changer les mentalités sur la place des femmes dans le numérique passe aussi par l’éducation, c’est pourquoi Simplon met en place des actions de sensibilisation pour initier les filles et les garçons au code et prévenir les biais de genre dans l’orientation scolaire et professionnelle.</p>
+        </div>
+     </div>
+     <div class="action-slider">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active action-slider-item">
+                <h2>Dégenrons la Tech</h2>
+                <p class="container">Des ateliers à destination des salarié·e·s d’entreprises qui ont pour objectifs de :
+                    sensibiliser les collaborateur·rice·s au rôle des femmes dans la tech;
+                    identifier les pistes d’amélioration;
+                    concevoir des solutions pour résoudre le problème de sous-représentativité des femmes.</p>
+                <button>DECOUVREZ LES ATELIERS</button>
+              </div>
+              <div class="carousel-item action-slider-item">
+                <h2>Nos actions de plaidoyer</h2>
+                <p class="container">Au-delà de ses actions pour les apprenantes, les entreprises et les professionnel·le·s de l’accompagnement socio-professionnel, Simplon s’implique aussi dans des actions de communication et de plaidoyer pour faire connaître les enjeux sociétaux économiques de la formation des femmes aux métiers techniques du numérique</p>
+                <button>ACTION DE COMMUNICATION ET DE PLAIDOYER</button>  
+            </div>
+            </div>
+          </div>
+     </div>
     <!-- fin contenu -->
 
     <!-- début footer -->
